// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackForm matches the snapshot with custom styles 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "backgroundColor": "#ffffff",
      },
      {
        "padding": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        [
          {
            "backgroundColor": "#ffffff",
          },
          {
            "padding": 0,
          },
        ],
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView>
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
            }
          }
        >
          <Text
            style={
              {
                "color": "#ff0000",
                "fontSize": 20,
              }
            }
          >
            Report a Bug
          </Text>
          <Text
            style={
              {
                "color": "#00ff00",
                "fontSize": 15,
              }
            }
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            placeholder="Your Name"
            style={
              {
                "borderColor": "#0000ff",
                "color": "#000000",
                "fontSize": 13,
                "height": 50,
              }
            }
            value="Test User"
          />
          <Text
            style={
              {
                "color": "#00ff00",
                "fontSize": 15,
              }
            }
          >
            Email
          </Text>
          <TextInput
            keyboardType="email-address"
            onChangeText={[Function]}
            placeholder="your.email@example.org"
            style={
              {
                "borderColor": "#0000ff",
                "color": "#000000",
                "fontSize": 13,
                "height": 50,
              }
            }
            value="test@example.com"
          />
          <Text
            style={
              {
                "color": "#00ff00",
                "fontSize": 15,
              }
            }
          >
            Description
             (required)
          </Text>
          <TextInput
            multiline={true}
            onChangeText={[Function]}
            placeholder="What's the bug? What did you expect?"
            style={
              [
                {
                  "borderColor": "#0000ff",
                  "color": "#000000",
                  "fontSize": 13,
                  "height": 50,
                },
                {
                  "color": "#00ff00",
                  "height": 50,
                },
              ]
            }
            value=""
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#ffff00",
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ff0000",
                  "fontSize": 12,
                }
              }
            >
              Send Bug Report
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingVertical": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ff0000",
                  "fontSize": 10,
                }
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`FeedbackForm matches the snapshot with custom texts 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "padding": 20,
      },
      {
        "padding": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        [
          {
            "backgroundColor": "#ffffff",
            "flex": 1,
            "padding": 20,
          },
          {
            "padding": 0,
          },
        ],
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView>
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "flex": 1,
              "padding": 20,
            }
          }
        >
          <Text
            style={
              {
                "color": "#2b2233",
                "fontSize": 24,
                "fontWeight": "bold",
                "marginBottom": 20,
                "textAlign": "center",
              }
            }
          >
            Feedback Form
          </Text>
          <Text
            style={
              {
                "color": "#2b2233",
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            Name Label
          </Text>
          <TextInput
            onChangeText={[Function]}
            placeholder="Name Placeholder"
            style={
              {
                "borderColor": "rgba(41, 35, 47, 0.13)",
                "borderRadius": 5,
                "borderWidth": 1,
                "color": "#2b2233",
                "fontSize": 16,
                "height": 50,
                "marginBottom": 15,
                "paddingHorizontal": 10,
              }
            }
            value="Test User"
          />
          <Text
            style={
              {
                "color": "#2b2233",
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            Email Label
          </Text>
          <TextInput
            keyboardType="email-address"
            onChangeText={[Function]}
            placeholder="Email Placeholder"
            style={
              {
                "borderColor": "rgba(41, 35, 47, 0.13)",
                "borderRadius": 5,
                "borderWidth": 1,
                "color": "#2b2233",
                "fontSize": 16,
                "height": 50,
                "marginBottom": 15,
                "paddingHorizontal": 10,
              }
            }
            value="test@example.com"
          />
          <Text
            style={
              {
                "color": "#2b2233",
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            Message Label
             (is required label)
          </Text>
          <TextInput
            multiline={true}
            onChangeText={[Function]}
            placeholder="Message Placeholder"
            style={
              [
                {
                  "borderColor": "rgba(41, 35, 47, 0.13)",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "color": "#2b2233",
                  "fontSize": 16,
                  "height": 50,
                  "marginBottom": 15,
                  "paddingHorizontal": 10,
                },
                {
                  "color": "#2b2233",
                  "height": 100,
                  "textAlignVertical": "top",
                },
              ]
            }
            value=""
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(88, 74, 192, 1)",
                "borderRadius": 5,
                "marginBottom": 10,
                "opacity": 1,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ffffff",
                  "fontSize": 18,
                }
              }
            >
              Submit Button Label
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "opacity": 1,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#2b2233",
                  "fontSize": 16,
                }
              }
            >
              Cancel Button Label
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`FeedbackForm matches the snapshot with default configuration 1`] = `
<RCTSafeAreaView
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "padding": 20,
      },
      {
        "padding": 0,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        [
          {
            "backgroundColor": "#ffffff",
            "flex": 1,
            "padding": 20,
          },
          {
            "padding": 0,
          },
        ],
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView>
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "flex": 1,
              "padding": 20,
            }
          }
        >
          <Text
            style={
              {
                "color": "#2b2233",
                "fontSize": 24,
                "fontWeight": "bold",
                "marginBottom": 20,
                "textAlign": "center",
              }
            }
          >
            Report a Bug
          </Text>
          <Text
            style={
              {
                "color": "#2b2233",
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            Name
          </Text>
          <TextInput
            onChangeText={[Function]}
            placeholder="Your Name"
            style={
              {
                "borderColor": "rgba(41, 35, 47, 0.13)",
                "borderRadius": 5,
                "borderWidth": 1,
                "color": "#2b2233",
                "fontSize": 16,
                "height": 50,
                "marginBottom": 15,
                "paddingHorizontal": 10,
              }
            }
            value="Test User"
          />
          <Text
            style={
              {
                "color": "#2b2233",
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            Email
          </Text>
          <TextInput
            keyboardType="email-address"
            onChangeText={[Function]}
            placeholder="your.email@example.org"
            style={
              {
                "borderColor": "rgba(41, 35, 47, 0.13)",
                "borderRadius": 5,
                "borderWidth": 1,
                "color": "#2b2233",
                "fontSize": 16,
                "height": 50,
                "marginBottom": 15,
                "paddingHorizontal": 10,
              }
            }
            value="test@example.com"
          />
          <Text
            style={
              {
                "color": "#2b2233",
                "fontSize": 16,
                "marginBottom": 4,
              }
            }
          >
            Description
             (required)
          </Text>
          <TextInput
            multiline={true}
            onChangeText={[Function]}
            placeholder="What's the bug? What did you expect?"
            style={
              [
                {
                  "borderColor": "rgba(41, 35, 47, 0.13)",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "color": "#2b2233",
                  "fontSize": 16,
                  "height": 50,
                  "marginBottom": 15,
                  "paddingHorizontal": 10,
                },
                {
                  "color": "#2b2233",
                  "height": 100,
                  "textAlignVertical": "top",
                },
              ]
            }
            value=""
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "rgba(88, 74, 192, 1)",
                "borderRadius": 5,
                "marginBottom": 10,
                "opacity": 1,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ffffff",
                  "fontSize": 18,
                }
              }
            >
              Send Bug Report
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "opacity": 1,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#2b2233",
                  "fontSize": 16,
                }
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;
